[project]
name = "my_agent"
version = "0.1.0"
description = "Example LangGraph project for deployment to LangGraph Cloud"
authors = [
    { name = "langchain-ai" }, 
]
requires-python = ">=3.9.0,<3.13"
dependencies = [
    "langgraph>=0.2.0,<0.3.0",
    "langgraph_cli>=0.2.5,<0.3.0",
    "langchain_anthropic>=0.3.12,<0.4.0",
    "langchain_core>=0.3.55,<0.4.0",
    "langchain_openai>=0.3.14,<0.4.0",
    "tavily-python>=0.3.0,<0.4.0",
    "langchain_community>=0.3.21,<0.4.0",
    "pydantic>=2.11.3",
]

[tool.setuptools]
packages = ["my_agent"]
